--- a/Faolan.PacketAnalyzer/MainWindow.xaml
+++ b/Faolan.PacketAnalyzer/MainWindow.xaml
@@ -7,18 +7,49 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="700" Width="1200">
     <Grid>
-        <ListBox x:Name="outputListBox" Margin="10,10,10,310" SelectionChanged="outputListBox_SelectionChanged">
-            <ListBox.ItemTemplate>
-                <DataTemplate DataType="{x:Type local:PacketWrapper}">
-                    <TextBlock Text="{Binding Path=DisplayString}" Background="{Binding Path=Color}"/>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
-        <TextBox x:Name="outputTextBox" Margin="141,0,527,10" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" IsReadOnly="True" VerticalAlignment="Bottom" Height="295" />
-        <TextBox x:Name="outputHexTextBox" Margin="0,0,10,10" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" IsReadOnly="True" VerticalAlignment="Bottom" Height="295" HorizontalAlignment="Right" Width="512"  />
-        <Button x:Name="loadButton" Content="Load" Margin="10,0,0,35" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="126" Click="loadButton_Click" />
-        <Button x:Name="saveButton" Content="Save" Margin="10,0,0,10" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="126" Click="saveButton_Click"/>
-        <CheckBox x:Name="useTicksInSRCheckBox" Content="Ticks in s/r names"  VerticalAlignment="Bottom" HorizontalAlignment="Left" IsChecked="True" Checked="useTicksInSRCheckBox_Checked" Margin="10,0,0,60"/>
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
 
+        <DataGrid Grid.RowSpan="2" Grid.ColumnSpan="4" Grid.Row="0" Grid.Column="0" x:Name="packetDataGrid" Margin="10,10,10,0" SelectionChanged="packetDataGrid_SelectionChanged" ItemsSource="{Binding}" AutoGenerateColumns="False" >
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Ticks" Binding="{Binding Ticks}"/>
+                <DataGridTextColumn Header="Service" Binding="{Binding ServiceNameDisplay}"/>
+                <DataGridTextColumn Header="Opcode" Binding="{Binding Opcode}"/>
+                <DataGridTextColumn Header="Opcode2" Binding="{Binding GameServerOpcode}"/>
+                <DataGridTextColumn Header="Body" Binding="{Binding Path=BytesRowDisplay}"  />
+                <DataGridTextColumn Header="Strings" Binding="{Binding Path=BytesStringDisplay}"  />
+                <!-- Background="{Binding Path=Color}" -->
+            </DataGrid.Columns>
+        </DataGrid>
+
+        <Grid Grid.ColumnSpan="3" Grid.Row="2" Grid.Column="1" >
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+
+            <TextBox  Margin="10,10,10,10" Grid.Column="0" x:Name="notesTextBox" Text="{Binding Notes}" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" />
+            <TextBox  Margin="0,10,10,10" Grid.Column="1" Grid.ColumnSpan="2" x:Name="outputHexTextBox" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" IsReadOnly="True"   />
+            <TextBox  Margin="0,10,10,10" Grid.Column="3" x:Name="outputTextBox"  TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" IsReadOnly="True" />
+        </Grid>
+
+        <Grid Grid.Row="2" Grid.Column="0" >
+            <CheckBox x:Name="useTicksInSRCheckBox" Content="Ticks in s/r names"  VerticalAlignment="Bottom" HorizontalAlignment="Left" IsChecked="True" Checked="useTicksInSRCheckBox_Checked" Margin="10,0,0,85"/>
+
+            <Button x:Name="importButton" Content="Import" Margin="10,0,0,60" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="126" Click="importButton_Click" />
+            <Button x:Name="loadButton" Content="Load" Margin="10,0,0,35" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="126" Click="loadButton_Click" />
+            <Button x:Name="saveButton" Content="Save" Margin="10,0,0,10" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="126" Click="saveButton_Click"/>
+        </Grid>
     </Grid>
 </Window>
